# daemon

./: .codacy.yaml  .codacy.yml  .coderabbit.yaml  .gitignore  .golangci.yml  .ktn-linter.yaml  .qodo-merge.toml  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_OPPORTUNITIES.md  KTN_LINTER_STATUS.md  LICENSE  Makefile  OPTIMIZATION_REPORT.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PROFILING_ANALYSIS.md  README.md  SPRINT2_SUMMARY.md  SPRINT3_SUMMARY.md  TUI_FIXES_FINAL_SUMMARY.md  TUI_TEST_FIXES_SUMMARY.md  go.work  go.work.sum  here.md  ktn-linter-fix-summary.md  mkdocs.yml  nfpm.yaml
.devcontainer/: .template-version  CLAUDE.md  devcontainer.json  docker-compose.yml
.devcontainer/docs/: review-agent-knowledge-base.md  workflow-plan-apply.md
.devcontainer/features/: CLAUDE.md
.devcontainer/features/architectures/: CLAUDE.md  README.md  clean.md  ddd.md  event-driven.md  flat.md  hexagonal.md  layered.md  microservices.md  mvc.md  mvp.md  mvvm.md  onion.md  package.md  serverless.md  sliceable-monolith.md
.devcontainer/features/claude/: .mcp.json  CLAUDE.md  devcontainer-feature.json  install.sh
.devcontainer/features/languages/: CLAUDE.md
.devcontainer/gpg/: .gitignore  kodflow.pub
.devcontainer/hooks/: CLAUDE.md  commit-msg
.devcontainer/hooks/lifecycle/: CLAUDE.md  initialize.sh  onCreate.sh  postAttach.sh  postCreate.sh  postStart.sh  updateContent.sh
.devcontainer/hooks/shared/: .env.example  CLAUDE.md  utils.sh
.devcontainer/images/: .p10k.zsh  CLAUDE.md  Dockerfile  grepai.config.yaml  mcp.json.tpl
.devcontainer/images/.claude/: settings.json
.github/: CLAUDE.md
.github/scripts/: vm-acquire.sh  vm-release.sh
.github/workflows/: CLAUDE.md  ci-arm64.yml  ci-x86.yml  ci.yml  deploy-repo.yml  docker-images.yml  e2e-macos.yml  e2e.yml  release.yml
api/proto/: buf.gen.yaml  buf.yaml
docs/: CLAUDE.md  INSTALL.md  METRICS_CONFIGURATION.md  README.md  SETUP_GPG.md  architecture.md  changelog.md  components.md  configuration.md  development.md  flows.md  index.md
docs/api/: daemon-service.md  index.md  metrics-service.md
docs/architecture/: data-flow.md  hexagonal.md  index.md
docs/components/: discovery.md  health.md  lifecycle.md  metrics.md  supervisor.md  tui.md
docs/configuration/: index.md  monitoring.md  services.md
docs/deployment/: container.md  index.md  platforms.md  systemd.md
docs/examples/: metrics-config-examples.yaml
docs/guides/: development.md  getting-started.md
docs/reference/: cli.md  proto.md
docs/stylesheets/: extra.css
e2e/: CLAUDE.md  Dockerfile.alpine  Dockerfile.alpine-runit  Dockerfile.alpine-script  Dockerfile.debian  Dockerfile.debian-script  Dockerfile.devuan  Dockerfile.fedora  Dockerfile.pid1  Dockerfile.rocky  Dockerfile.scratch  Dockerfile.ubuntu  Dockerfile.void  RESEARCH-SYNTHESIS.md  Vagrantfile  config-pid1.yaml  config-scratch.yaml  probe-capabilities.sh  start-nginx.sh  test-container.sh  test-install.sh  test-macos.sh  validate-probe.sh
e2e/behavioral/: CLAUDE.md  Dockerfile.behavioral  backoff_test.go  go.mod  go.sum  health_test.go  helpers_test.go  pid1_test.go  restart_test.go
e2e/behavioral/crasher/: go.mod  main.go
e2e/behavioral/testdata/: backoff-reset.yaml  backoff.yaml  health-http.yaml  health-tcp.yaml  health-unhealthy.yaml  ignore-term.yaml  long-running.yaml  orphan-spawner.yaml  restart-always.yaml  restart-never.yaml  (+3 more)
examples/: CLAUDE.md  config-dev.yaml  config.yaml  full-monitoring.yaml
setup/: CLAUDE.md  install.sh  uninstall.sh
setup/init/: CLAUDE.md
setup/packaging/: CLAUDE.md
setup/scripts/: CLAUDE.md  postinstall-apk.sh  postinstall-arch.sh  postinstall-deb.sh  postinstall-rpm.sh  postinstall-xbps.sh  preremove-apk.sh  preremove-arch.sh  preremove-deb.sh  preremove-rpm.sh  preremove-xbps.sh
src/: .gitignore  .golangci.yml  .ktn-linter.yaml  CLAUDE.md  COVERAGE_PLAN.md  go.mod  go.sum
src/cmd/: CLAUDE.md
src/internal/: CLAUDE.md
src/lib/: CLAUDE.md
src/lib/probe/: CLAUDE.md  COMPLETE_PROBE_PLAN.md  Cargo.toml  PERFECT_PROBE_ROADMAP.md  PROBE_STATUS.md  rust-toolchain.toml  rustfmt.toml
src/lib/probe/crates/probe-cache/: CLAUDE.md  Cargo.toml
src/lib/probe/crates/probe-cache/src/: lib.rs  policy.rs  ttl.rs
src/lib/probe/crates/probe-ffi/: CLAUDE.md  Cargo.toml
src/lib/probe/crates/probe-ffi/src/: lib.rs
src/lib/probe/crates/probe-metrics/: CLAUDE.md  Cargo.toml
src/lib/probe/crates/probe-metrics/src/: lib.rs
src/lib/probe/crates/probe-platform/: CLAUDE.md  Cargo.toml
src/lib/probe/crates/probe-platform/benches/: metrics.rs
src/lib/probe/crates/probe-platform/src/: lib.rs
src/lib/probe/crates/probe-platform/src/bsd/: mod.rs  sysctl.rs  thermal.rs
src/lib/probe/crates/probe-platform/src/darwin/: mod.rs  sysctl.rs
src/lib/probe/crates/probe-platform/src/linux/: connections.rs  mod.rs  procfs.rs  thermal.rs
src/lib/probe/crates/probe-platform/src/stub/: mod.rs
src/lib/probe/crates/probe-quota/: CLAUDE.md  Cargo.toml
src/lib/probe/crates/probe-quota/src/: freebsd.rs  lib.rs  linux.rs  rlimit.rs
src/lib/probe/crates/probe-runtime/: CLAUDE.md  Cargo.toml
src/lib/probe/crates/probe-runtime/examples/: detect_vm.rs
src/lib/probe/crates/probe-runtime/src/: detector.rs  lib.rs
src/lib/probe/crates/probe-runtime/src/available/: cli.rs  kubernetes.rs  mod.rs  nomad.rs  sockets.rs
src/lib/probe/crates/probe-runtime/src/inside/: cloud.rs  containerd.rs  crio.rs  docker.rs  freebsd_jail.rs  kubernetes.rs  lxc.rs  mod.rs  netbsd_vm.rs  nomad.rs  openbsd_vm.rs  podman.rs  swarm.rs  systemd_nspawn.rs
src/lib/probe/crates/probe-runtime/src/platform/: darwin.rs  freebsd.rs  linux.rs  mod.rs  netbsd.rs  openbsd.rs
src/lib/probe/include/: probe.h
website/: CLAUDE.md  config.html  index.html  install.html  style.css
(+1301 files in other folders)
