# Probe - Cross-platform system metrics library
# This workspace provides the Rust kernel for superviz metrics collection

[workspace]
resolver = "2"
members = [
    "crates/probe-cache",
    "crates/probe-ffi",
    "crates/probe-metrics",
    "crates/probe-platform",
    "crates/probe-quota",
    "crates/probe-runtime",
]

[workspace.package]
version = "0.1.0"
authors = ["kodflow"]
edition = "2024"
license = "MIT"
repository = "https://github.com/kodflow/superviz"
description = "Cross-platform system metrics collection library"

[workspace.dependencies]
# Core
thiserror = "2.0"
log = "0.4"
parking_lot = "0.12"

# Platform-specific
nix = { version = "0.29", features = ["process", "signal", "fs", "sched"] }
libc = "0.2"

# Linux
procfs = "0.17"

# macOS
mach2 = "0.4"

# Serialization (for benchmarks)
serde = { version = "1.0", features = ["derive"] }

# Benchmarking
criterion = "0.5"

[profile.release]
lto = true           # Link-Time Optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary
strip = true         # Strip symbols
