# probe-quota - Resource quota management
# Abstracts cgroups (Linux), launchd (macOS), jail (BSD), and rlimit (POSIX)

[package]
name = "probe-quota"
version.workspace = true
edition.workspace = true
description = "Cross-platform resource quota management"

[dependencies]
thiserror.workspace = true
log.workspace = true
libc.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
# cgroups-rs or manual implementation

[target.'cfg(any(target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
nix.workspace = true
