# probe-runtime - Universal container/orchestrator runtime detection
# Detects Docker, Podman, Kubernetes, Nomad, LXC, containerd, etc.

[package]
name = "probe-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Universal container and orchestrator runtime detection"

[dependencies]
thiserror.workspace = true
log.workspace = true
libc.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
procfs.workspace = true

[dev-dependencies]
tempfile = "3"
